# Empotrados_ProyectoI

./: .gitignore  README.md  server2  serverGPIO2.c
ProjectLib/: CMakeLists.txt
ProjectLib/include/: biblioteca.h
ProjectLib/src/: CMakeLists.txt  biblioteca.c  main.c
Server/: rest_api  rest_api.c
ServerPi/: serverGPIO.c
app/expo-app-p1-ce3111/: app.json  babel.config.js  package-lock.json  package.json
app/expo-app-p1-ce3111/app/: [id].js  _layout.js  index.js
app/expo-app-p1-ce3111/components/: Doors.js  HomeCard.js  HomeHeader.js  Lights.js  SignInButton.js
app/expo-app-p1-ce3111/components/cards/: DoorCard.js  DoorsCard.js  LightCard.js  LightsCard.js  PictureCard.js
app/expo-app-p1-ce3111/components/headers/: HomeHeader.js
app/expo-app-p1-ce3111/constants/: icons.js  images.js  theme.js
app/expo-app-p1-ce3111/hook/: useFetch.js  useFetch2.js  useGet.js  usePost.js
